fix(general): fix letter spacing on video call to action title and break line on impac text

--- a/app/assets/stylesheets/base/award.sass
+++ b/app/assets/stylesheets/base/award.sass
@@ -34,6 +34,7 @@
     h1
       +adjust-font-size-to(20px)
       line-height: 1.2em
+      letter-spacing: 1px
       color: #fff
       text-transform: uppercase
       margin-top: 55px
